# db-checksql

./: .gitignore  README.md  build-container.sh  env.yaml  pyproject.toml  run-server.sh
demo/: 1.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql  check.py
src/checksql/: __init__.py  __main__.py  app.py  exceptions.py  findings.py  select.py  utils.py
