[build-system]
requires = ["setuptools >= 75.0", "setuptools-scm >= 8.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "checksql"
authors = [{ name = "Olaf Mersmann", email = "olafm@p-value.net" }]
maintainers = [{ name = "Olaf Mersmann", email = "olafm@p-value.net" }]
description = "CheckSQL service"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["apsw", "fastapi", "uvicorn", "polars", "uvicorn"]
dynamic = ["version"]

[tool.setuptools_scm]
version_file = "src/checksql/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest]
log_cli = true
addopts = "--doctest-modules"
